--- a/src/App.css
+++ b/src/App.css
@@ -256,3 +256,38 @@
   justify-content: center;
   gap: 30px;
 }
+
+.disable:hover{
+  color: #717171 !important;
+  background: #313131 !important;
+  border: 1px solid #414141 !important;
+  cursor: not-allowed;
+}
+
+.errorMessage{
+  color: red;
+}
+
+.loader {
+  position: absolute;
+  top: 60%;
+  left: 60%;
+  width: 50px;
+  height: 50px;
+  margin:-60px 0 0 -60px;
+  -webkit-animation:spin 1s linear infinite;
+  -moz-animation:spin 1s linear infinite;
+  animation:spin 2s linear infinite;
+}
+@-moz-keyframes spin { 
+  100% { -moz-transform: rotate(360deg); } 
+}
+@-webkit-keyframes spin { 
+  100% { -webkit-transform: rotate(360deg); } 
+}
+@keyframes spin { 
+  100% { 
+      -webkit-transform: rotate(360deg); 
+      transform:rotate(360deg); 
+  } 
+}
